Fix buttons too close to each other for navigation

--- a/src/styles/title-menu.scss
+++ b/src/styles/title-menu.scss
@@ -180,6 +180,7 @@
 			.actions {
 				display: grid;
 				grid-template-columns: repeat(auto-fill, minmax(min(100%, 110px), 1fr));
+				gap: 1px;
 			}
 		}
 		.tsuki-cover {
